# MonocularBiomech

./: .gitignore  ORIGINAL.md  README.md  fix_imports.py  main.py  metrabs_metadata.pkl  pyproject.toml  test_pipeline.py
metrabs_detector/: fingerprint.pb
metrabs_tf/: init.py  main.py  paths.py  tfu3d.py  util.py  util3d.py
metrabs_tf/augmentation/: background.py  voc_loader.py
metrabs_tf/inference_scripts/: predict_aspset.py  predict_h36m.py  predict_mupots.py  predict_tdhp.py  predict_tdoh.py  predict_tdpw.py
metrabs_tf/models/: eval_metrics.py  metrabs.py  util.py
metrabs_tf/multiperson/: multiperson_model.py  plausibility_check.py  warping.py
monocular_demos/: utils.py
monocular_demos/biomechanics_mjx/: monocular_trajectory.py  visualize.py
