[tool.black]
line-length = 150

[project]
name = "monocular_demos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio",
    "plotly",
    "jax",
    "jaxlie",
    "jmp",
    "equinox",
    "tensorflow-hub",
    "mujoco-mjx",
    "opencv-python",
    "optax",
    "tensorflow>=2.20.0",
    "matplotlib>=3.10.8",
    "setuptools==70.0.0",
    "ipykernel>=7.2.0",
]

[dependency-groups]
dev = [
    "onnx>=1.20.1",
    "tf2onnx>=1.17.0",
    "ultralytics>=8.4.19",
]

[tool.setuptools.package-data]
"*" = ["biomechanics_mjx/data/humanoid/**/*"]
