[tool.black]
line-length = 150

[project]
name = "monocular_demos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio",
    "plotly",
    "jax",
    "jaxlie",
    "jmp",
    "equinox",
    "tensorflow-hub",
    "mujoco-mjx",
    "opencv-python",
    "optax",
    "tensorflow>=2.20.0,<2.21",
    "tf-keras>=2.20.0,<2.21",
    "matplotlib>=3.10.8",
    "setuptools==70.0.0",
    "ipykernel>=7.2.0",
    "onnxruntime>=1.24.3",
    "simplepyutils>=0.2.1",
    "more-itertools>=10.8.0",
    "addict>=2.4.0",
    "einops>=0.8.2",
    "tensorflow-graphics>=2020.5.20",
]

[dependency-groups]
dev = [
    "onnx>=1.20.1",
    "tf2onnx>=1.17.0",
    "ultralytics>=8.4.19",
]

[tool.setuptools.package-data]
"*" = ["biomechanics_mjx/data/humanoid/**/*"]
